<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:rowCount="6"
    android:columnCount="3"
    android:background="@drawable/pozadina"
    android:padding="20dp"
    >

    <EditText
        android:id="@+id/event_name"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_columnSpan="3"
        android:layout_marginBottom="15dp"
        android:hint="@string/event_name" />
    <EditText
        android:id="@+id/description"
        android:layout_height="90dp"
        android:layout_width="match_parent"
        android:layout_marginBottom="15dp"
        android:hint="@string/description"
        android:layout_columnSpan="3"
        />

    <Button
        android:id="@+id/check_for_time_location"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_row="0"
        android:layout_columnSpan="1"
        android:layout_marginBottom="15dp"
        android:text="@string/check_time_for_location" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="114dp"
        android:layout_height="90dp"
        android:layout_marginBottom="15dp" />

    <AutoCompleteTextView
        android:id="@+id/city"
        android:layout_width="140dp"
        android:layout_height="90dp"
        android:layout_row="0"
        android:layout_marginBottom="15dp"
        android:hint="@string/city" />

    <Button
        android:id="@+id/set_date"
        android:layout_width="130dp"
        android:layout_height="90dp"
        android:layout_columnSpan="1"
        android:layout_marginBottom="15dp"
        android:text="@string/set_date" />

    <Button
        android:id="@+id/set_time"
        android:layout_width="127dp"
        android:layout_height="90dp"
        android:layout_row="3"
        android:layout_column="2"
        android:layout_columnSpan="1"
        android:layout_marginBottom="15dp"
        android:text="@string/set_time" />



    <EditText
        android:id="@+id/url"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_row="0"
        android:layout_columnSpan="3"
        android:layout_marginBottom="15dp"
        android:hint="@string/url" />

    <Button
        android:id="@+id/save_event"
        android:layout_height="90dp"
        android:layout_width="match_parent"
        android:layout_columnSpan="3"
        android:text="@string/save_event"
        android:textAlignment="center"
        android:layout_marginBottom="15dp"
        />
</GridLayout>