<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/pozadina"
    android:orientation="vertical">

    <Button
        android:id="@+id/add_event"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="80dp"
        android:text="@string/add_event"/>
    <Button
        android:id="@+id/show_events"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="80dp"
        android:text="@string/show_events"/>
    <Button
        android:id="@+id/export_to_json_file"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="80dp"
        android:text="@string/export_to_json_file"/>
</LinearLayout>
